# slackbot

./: .pre-commit-config.yaml  README.md  env_slack.txt  pyproject.toml  requirements.txt  run.py  schedule_exe.py  slackbot_settings.py
.github/ISSUE_TEMPLATE/: Bug_Report.md  Feature_Request.md
plugins/: get_webpage.py  memo.py  my_mention.py  poll.py  suggest_sauna.py
src/: run.py  schedule_exe.py
src/plugins/: get_webpage.py  memo.py  my_mention.py  poll.py  slacker.py  suggest_sauna.py
