[tool.poetry]
name = "slack"
version = "0.1.0"
description = ""
authors = ["kenta-suzuki <kenta_suzuki@albert2005.co.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
bs4 = "^0.0.1"
requests = "^2.27.1"
pandas = "^1.4.2"
slackbot = "^1.0.0"
slacker = "^0.14.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pytest = "^7.1.2"
isort = "^5.10.1"
pre-commit = "^2.18.1"
nbqa = "^1.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# 行の最大の長さはPEP8準拠
line-length = 79

[tool.isort]
# Blackと競合しないよう設定
profile = "black"
# 行の最大の長さはPEP8に準拠
line_length = 79
